--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,7 +5,7 @@
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <link rel="icon" type="image/png" href="/chat.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Let's Chat</title>
+    <title>Let's-Chat</title>
   </head>
   <body>
     <div id="root"></div>
